; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-target.c_iot_idle_for.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-target.c_iot_idle_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_tracker = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.io_tracker*, i64)* @iot_idle_for to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iot_idle_for(%struct.io_tracker* %0, i64 %1) #0 {
  %3 = alloca %struct.io_tracker*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.io_tracker* %0, %struct.io_tracker** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.io_tracker*, %struct.io_tracker** %3, align 8
  %8 = getelementptr inbounds %struct.io_tracker, %struct.io_tracker* %7, i32 0, i32 0
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.io_tracker*, %struct.io_tracker** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @__iot_idle_for(%struct.io_tracker* %11, i64 %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.io_tracker*, %struct.io_tracker** %3, align 8
  %15 = getelementptr inbounds %struct.io_tracker, %struct.io_tracker* %14, i32 0, i32 0
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* %15, i64 %16)
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__iot_idle_for(%struct.io_tracker*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
